Fix Firefox having a scrollbar.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -369,7 +369,7 @@ tbody tr
 
 .dataTables_scrollBody
 {
-    scrollbar-width: 0px;
+    scrollbar-width: none;
 }
 
 .dataTables_scrollBody::-webkit-scrollbar
